fix background clipping issue

--- a/src/styles/partials/_base.scss
+++ b/src/styles/partials/_base.scss
@@ -55,8 +55,12 @@ body {
   background-position: 50% 50%;
   background-attachment: fixed;
   background-size: cover;
-  position: relative;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
   height: 100%;
+  z-index: -1;
 
   &::before {
     content: '';
